update email tip

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -933,5 +933,7 @@
   "Complete Authentication": "Authentifizierung abschließen",
   "clock_in": "Einchecken",
   "invite": "Einladen",
-  "new_wallet": "Geldbörse erstellen"
+  "new_wallet": "Geldbörse erstellen",
+  "Small Tip:": "Kleiner Tipp:",
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Wenn Sie ein Gmail-Konto verwenden und den Bestätigungscode nicht in Ihrem Posteingang finden, wurde er höchstwahrscheinlich in Ihren Spam-Ordner gefiltert."
 }
