--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -935,6 +935,8 @@
   "Complete Authentication": "",
   "clock_in": "Clock In",
   "invite": "Invite",
-  "new_wallet": "Creat Wallet"
+  "new_wallet": "Creat Wallet",
+  "Small Tip:": "",
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": ""
 }
 
