--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -935,5 +935,7 @@
   "Complete Authentication": "認証を完了",
   "clock_in": "出勤する",
   "invite": "招待する",
-  "new_wallet": "ウォレットを作成"
+  "new_wallet": "ウォレットを作成",
+  "Small Tip:": "小さなヒント：",
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Gmailアカウントを使用していて、受信トレイに確認コードが見つからない場合、スパムフォルダに振り分けられている可能性が高いです。"
 }
