--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -934,5 +934,7 @@
   "Complete Authentication": "Завершить аутентификацию",
   "clock_in": "Отметиться",
   "invite": "Пригласить",
-  "new_wallet": "Создать кошелек"
+  "new_wallet": "Создать кошелек",
+  "Small Tip:": "Маленький совет:",
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Если вы используете учетную запись Gmail и не можете найти код подтверждения во Входящих, скорее всего, он был отфильтрован в папку «Спам»."
 }
