--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -934,5 +934,7 @@
   "Complete Authentication": "Завершитьการยืนยันตัวตน",
   "clock_in": "ลงเวลางาน",
   "invite": "เชิญ",
-  "new_wallet": "สร้างกระเป๋าเงิน"
+  "new_wallet": "สร้างกระเป๋าเงิน",
+  "Small Tip:": "เคล็ดลับเล็กๆ น้อยๆ:",
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "หากคุณใช้บัญชี Gmail และไม่พบรหัสยืนยันในกล่องจดหมายของคุณ มีความเป็นไปได้สูงที่มันจะถูกกรองไปยังโฟลเดอร์สแปม"
 }
