--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -937,6 +937,7 @@
   "invite": "Invite",
   "new_wallet": "Creat Wallet",
   "Small Tip:": "",
-  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": ""
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "",
+  "To claim the reward, you must first complete user verification !": ""
 }
 
