--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -926,5 +926,6 @@
   "invite": "Mời",
   "new_wallet": "Tạo ví",
   "Small Tip:": "Mẹo nhỏ:",
-  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Nếu bạn đang sử dụng tài khoản Gmail và không thể tìm thấy mã xác minh trong Hộp thư đến, rất có thể nó đã bị lọc vào thư mục Spam."
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Nếu bạn đang sử dụng tài khoản Gmail và không thể tìm thấy mã xác minh trong Hộp thư đến, rất có thể nó đã bị lọc vào thư mục Spam.",
+  "To claim the reward, you must first complete user verification !": "Để nhận phần thưởng, trước tiên bạn phải hoàn thành xác minh người dùng !"
 }
