--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -936,5 +936,6 @@
   "invite": "Invitar",
   "new_wallet": "Crear monedero",
   "Small Tip:": "Pequeño consejo:",
-  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Si estás usando una cuenta de Gmail y no encuentras el código de verificación en tu bandeja de entrada, es muy probable que se haya filtrado a tu carpeta de Spam."
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Si estás usando una cuenta de Gmail y no encuentras el código de verificación en tu bandeja de entrada, es muy probable que se haya filtrado a tu carpeta de Spam.",
+  "To claim the reward, you must first complete user verification !": "Para reclamar la recompensa, primero debes completar la verificación de usuario !"
 }
