--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -937,5 +937,6 @@
   "invite": "초대하다",
   "new_wallet": "지갑 생성",
   "Small Tip:": "작은 팁:",
-  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Gmail 계정을 사용 중이고 수신함에서 인증 코드를 찾을 수 없다면, 스팸 폴더로 필터링되었을 가능성이 높습니다."
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "Gmail 계정을 사용 중이고 수신함에서 인증 코드를 찾을 수 없다면, 스팸 폴더로 필터링되었을 가능성이 높습니다.",
+  "To claim the reward, you must first complete user verification !": "보상을 받으려면 먼저 사용자 인증을 완료해야 합니다 !"
 }
