--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -936,5 +936,6 @@
   "invite": "邀请",
   "new_wallet": "创建钱包",
   "Small Tip:": "小提示：",
-  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "如果您使用的是Gmail账户，并且在收件箱中找不到验证码，那么它很可能被过滤到了垃圾邮件文件夹中。"
+  "If you're using a Gmail account and can't find the verification code in your Inbox, it's highly likely that it's been filtered into your SpamFolder.": "如果您使用的是Gmail账户，并且在收件箱中找不到验证码，那么它很可能被过滤到了垃圾邮件文件夹中。",
+  "To claim the reward, you must first complete user verification !": "领取奖励需要先完成用户认证 !"
 }
